--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,6 @@
 html {
   overflow: hidden;
 }
-body {
-  background: #f9f7f1;
-}
 
 .App {
   text-align: center;
@@ -42,7 +39,6 @@ section {
 
 .container {
   width: 100%;
-  background: #f9f7f1;
   height: 100vh;
 }
 .regionLeft {
@@ -84,4 +80,60 @@ section {
   to {
     transform: rotate(360deg);
   }
+}
+
+/* Base */
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background: #223;
+  color: #fff;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  line-height: 1.5;
+  margin: 0;
+  padding: 0;
+}
+
+/* Page */
+
+.page {
+  height: 100vh;
+  padding: calc(5% + 1.5em) 5% 5%;
+  overflow-y: auto;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  -webkit-overflow-scrolling: touch;
+  transition: transform 1s ease-in-out;
+}
+
+.page-enter {
+  transform: translate(-100%, 0);
+}
+
+.page-enter-active {
+  transform: translate(0, 0);
+}
+
+.page-exit {
+  transform: translate(-100%, 0);
+}
+
+.page--prev.page-enter {
+  transform: translate(100%, 0);
+}
+
+.page--prev.page-enter-active {
+  transform: translate(0, 0);
+}
+
+.page--prev.page-exit {
+  transform: translate(100%, 0);
+}
+
+.page h1 {
+  margin-top: 0;
 }
